# couchannel

./: .dockerignore  .gitignore  Makefile  README.md  README.pl.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run-tests.sh
.github/workflows/: docker-build.yml  e2e.yml  quality.yml
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/hooks/: useToken.ts
contracts/: README.md  booking.openapi.yaml  identity.openapi.yaml  inventory.openapi.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE.pl.md  DEPLOYMENT.md  DEPLOYMENT.pl.md  LOCAL_DEV.md  LOCAL_DEV.pl.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: health.spec.ts
monitoring/: prometheus.yml
services/analytics/: requirements.txt
services/analytics/app/: config.py  events.py  main.py  models.py
services/api/: Dockerfile  requirements.txt
services/api/app/: auth.py  config.py  http_client.py  main.py
services/booking/: Dockerfile  requirements.txt
services/booking/app/: config.py  database.py  dependencies.py  events.py  main.py  models.py
services/identity/: requirements.txt
services/identity/app/: auth.py  cache.py  config.py  main.py
services/inventory/: Dockerfile  alembic.ini  requirements.txt
services/inventory/alembic/: env.py
services/inventory/app/: config.py  crud.py  dependencies.py  events.py  main.py  models.py
tests/: test_analytics_stats.py  test_api_aggregated_events.py  test_booking_persistence.py  test_identity_profiles.py  test_inventory_events.py
(+2 files in other folders)
