[project]
name = "couchchannel"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services", "tests"]
select = [
  "E","F","I","N","UP","B","A","C","TID","SIM"
]
ignore = ["E501", "B008", "A003"]
extend-ignore = ["UP006", "UP035"]

[tool.ruff.isort]
known-first-party = ["services"]
